豆瓣数据分析 - .gitignore优化

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ fabric.properties
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+# 自定义gitignore
+
+.idea
